# cppIni

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md  conanfile.py  conanfile.txt  requirements.txt
.github/workflows/: build.yaml  coverage.yaml  documentation.yaml
cmake/: CodeCoverage.cmake
docs/: CONTRIBUTING.md
include/cppIni/: Entry.h  File.h  Section.h  Variant.h  cppIni.h  cppIni_c.h
src/: CInterface.cpp  CMakeLists.txt  Entry.cpp  Entry.h  File.cpp  File.h  Section.cpp  Section.h  cppIni.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CInterfaceTest.cpp  CMakeLists.txt  ConstructionTest.cpp  EntryTest.cpp  FileTest.cpp  SectionTest.cpp  VariantTest.cpp  constructionTest.cpp  utils.h
tests/res/: test.ini
